# timetracker

./: .gitignore  README.md  pyproject.toml  thing.py
assets/: config.html  form.js  style.css  test.html
docs/: conf.py  index.rst
docs/sources/: api.rst  modules.rst  tests.rst  timetracker.chart.rst  timetracker.configurable.rst  timetracker.rst
tests/: __init__.py  test_data_colorer.py  test_timetracker.py
timetracker/: TODO.md  __init__.py  __main__.py  common.py  examplereport.py  models.py  report.py  tracker.py
timetracker/chart/: __init__.py  __main__.py  base_chart.py  color_chooser.py  data_colorer.py  data_shaper.py  new-design.md
timetracker/configurable/: __init__.py
timetracker/util/: substrings.py
