[tool.poetry]
name = "timetracker"
version = "0.1.0"
description = "Track what windows you spend time on"
authors = ["Violet white <violet.white.dammit@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
svgwrite = "^1.4.1"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
